# pyqt-potrace

./: README.md  pyproject.toml
src/: main.py  main_gui.py
