[tool.poetry]
name = "src"
version = "0.1.0"
description = "An application that uses Potrace to convert images to vector data."
authors = ["mochisue <motoki32925@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.3"
matplotlib = "^3.4.3"
svgpathtools = "^1.4.2"
PyQt6 = "^6.1.1"
beziers = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
